--- a/twitter-r-examples.ipynb
+++ b/twitter-r-examples.ipynb
@@ -503,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Im folgenden Aufbereitungsschritt teilen wir die Tweets in einzelne Wörter auf. Dies nennt man [Tokenization](https://en.wikipedia.org/wiki/Lexical_analysis#Tokenization). Zudem entfernen wir einige bestimmte Zeichenfolgen sowie sogenannte [Stoppwörter](https://de.wikipedia.org/wiki/Stoppwort) (d.h., Wörter, die sehr häufig in Texten vorkommen, für deren Inhalt jedoch i.d.R. nicht besonders wichtig sind)."
+    "Im folgenden Aufbereitungsschritt teilen wir die Tweets in einzelne Wörter auf. Dies nennt man [Tokenization](https://en.wikipedia.org/wiki/Lexical_analysis#Tokenization). Zudem entfernen wir einige bestimmte Zeichentypen und -folgen sowie sogenannte [Stoppwörter](https://de.wikipedia.org/wiki/Stoppwort) (d.h., Wörter, die sehr häufig in Texten vorkommen, für deren Inhalt jedoch i.d.R. nicht besonders wichtig sind)."
    ]
   },
   {
@@ -535,6 +535,13 @@
    "outputs": [],
    "source": [
     "tweets_en_dfm <- dfm(tweets_en_tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Selbstverständlich könnte das Preprocessing der Textdaten auch anders ausfallen oder erweitert werden (z.B. durch weitere Bereinigungsschritte mithilfe von Paketen wie [`qdapRegex`](https://github.com/trinker/qdapRegex) oder [`textclean`](https://github.com/trinker/textclean)). Wichtig ist hier allerdings zu beachten, dass die Wahl der Bereinigungsschritte sowie ihre Reihenfolge wesentlich bestimmten, wie die Daten, mit denen am Ende gearbeitet wird, aussehen bzw. was sie beinhalten."
    ]
   },
   {
