edit notebook code

--- a/twitter-r-examples.ipynb
+++ b/twitter-r-examples.ipynb
@@ -127,7 +127,6 @@
    "source": [
     "library(academictwitteR) # Sammlung der Daten\n",
     "library(tidyverse) # Aufbereitung der Daten\n",
-    "library(textclean) # Bereinigung der Textdaten\n",
     "library(quanteda) # Text Mining\n",
     "library(quanteda.textstats) # Textstatistiken\n",
     "library(quanteda.textplots) # Visualisierung der Textdaten"
@@ -161,22 +160,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Um die gesammelten *Twitter*-Daten zu speichern, erstellen wir einen `data`-Ordner (im Verzeichnis, in dem sich dieses Notebook befindet)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir.create('./data')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Daten sammeln"
    ]
   },
@@ -198,7 +181,8 @@
     "    start_tweets = \"2021-01-01T00:00:00Z\",\n",
     "    end_tweets = \"2022-05-10T00:00:00Z\",\n",
     "    n = 10000,\n",
-    "    data_path = \"./data\"\n",
+    "    data_path = \"./data\",\n",
+    "    bearer_token = bearer_token\n",
     "  )"
    ]
   },
@@ -281,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "profiles"
+    "glimpse(profiles)"
    ]
   },
   {
@@ -458,11 +442,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "remove_html <- \"&amp;|&lt;|&gt;\"\n",
+    "\n",
     "tweets_en <- tweets %>% \n",
     "  filter(lang == \"en\",\n",
     "         is.na(sourcetweet_type)) %>% \n",
     "  select(tweet_id, text, user_username) %>% \n",
-    "  mutate(text = str_remove_all(text, remove_reg))"
+    "  mutate(text = str_remove_all(text, remove_html))"
    ]
   },
   {
