edit ReadMe & fix typos in Notebook

--- a/twitter-r-examples.ipynb
+++ b/twitter-r-examples.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "Es gibt zahlreiche Tools, mit denen Forschende *Twitter*-Daten sammeln können. Die meisten von diesen nutzen die [Application Programming Interfaces (APIs) von Twitter](https://developer.twitter.com/en/docs/twitter-api) für den Zugriff auf die Daten, während andere Web. bzw. [Screen Scraping](https://de.wikipedia.org/wiki/Screen_Scraping) nutzen.\n",
     "\n",
-    "Neben der Art des Datenzugriffs unterscheiden sich die zahlreichen Tools für die Arbeit mit *Twitter*-Daten auch noch auf vielen anderen Dimensionen wie z.B.:\n",
+    "Neben der Art des Datenzugriffs unterscheiden sich die zahlreichen Tools für die Arbeit mit *Twitter*-Daten auch noch auf vielen anderen Dimensionen, wie z.B.:\n",
     "- Verfügt das Tool über ein Graphical User Interface (GUI)?\n",
     "- Handelt es sich bei dem Tool um Free and Open Source Software (FOSS)?\n",
     "- Sind Programmierkenntnisse zur Nutzung nötig? Wenn ja, in welcher Programmiersprache?\n",
@@ -39,7 +39,7 @@
     "- [Blog-Post *Social media data in research*](https://ocean.sagepub.com/blog/social-media-data-in-research-a-review-of-the-current-landscape) von Lily Davies bei *Sage Ocean* \n",
     "- [Blog-Post *Using Twitter as a data source*](https://blogs.lse.ac.uk/impactofsocialsciences/2021/05/18/using-twitter-as-a-data-source-an-overview-of-social-media-research-tools-2021/?s=09) von Wasim Ahmed\n",
     "\n",
-    "Zuderm arbeiten wir im Team [*Research Data & Methods*](https://www.cais.nrw/cais/team/#research) am [Center for Advanced Internet Studies (CAIS)](https://www.cais.nrw/) derzeit an einer Guideline mit dem Titel *Collecting Social Media Data - Tools for obtaining data from Social Media Platforms*, die bald veröffentlicht werden soll."
+    "Zudem arbeiten wir im Team [*Research Data & Methods*](https://www.cais.nrw/cais/team/#research) am [Center for Advanced Internet Studies (CAIS)](https://www.cais.nrw/) derzeit an einer Guideline mit dem Titel *Collecting Social Media Data - Tools for obtaining data from Social Media Platforms*, die bald veröffentlicht werden soll."
    ]
   },
   {
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wie so oft im `R`-Universum gibt es auch für die Sammlung, Aufbereitung und Analyse von *Twitter*-Daten verschiedene Pakete. Sehr umfangreiche Optionen für den Datenzugriff über die [*Twitter* API v1.1](https://developer.twitter.com/en/docs/twitter-api/v1) bieten etwa die Pakete [`rtweet`](https://docs.ropensci.org/rtweet/index.html) von [*rOpenSci*](https://ropensci.org/) und [`vosonSML`](https://vosonlab.github.io/vosonSML/) vom [*VOSON Lab*](http://vosonlab.net/). Eine Alternative zu `academictwitteR` für die Nutzung des [*Academic Product Track*](https://developer.twitter.com/en/products/twitter-api/academic-research) für die [*Twitter* API v2](https://developer.twitter.com/en/docs/twitter-api) ist das `R`-Paket [`einfach`](https://github.com/chainsawriot/einfach), welches auch eine GUI bietet (eine weitere Option für ein `R`-Paket für *Twitter*-Daten mit einer GUI ist [`VOSONdash`](https://vosonlab.github.io/VOSONDash/))."
+    "Wie so oft im `R`-Universum gibt es auch für die Sammlung, Aufbereitung und Analyse von *Twitter*-Daten verschiedene Pakete. Sehr umfangreiche Optionen für den Datenzugriff über die [*Twitter* API v1.1](https://developer.twitter.com/en/docs/twitter-api/v1) bieten etwa die Pakete [`rtweet`](https://docs.ropensci.org/rtweet/index.html) von [*rOpenSci*](https://ropensci.org/) und [`vosonSML`](https://vosonlab.github.io/vosonSML/) vom [*VOSON Lab*](http://vosonlab.net/). Eine Alternative zu `academictwitteR` für die Nutzung des [*Academic Product Track*](https://developer.twitter.com/en/products/twitter-api/academic-research) für die [*Twitter* API v2](https://developer.twitter.com/en/docs/twitter-api) ist das `R`-Paket [`einfach`](https://github.com/chainsawriot/einfach), welches auch eine GUI bietet (eine weiteres `R`-Paket für *Twitter*-Daten mit einer GUI ist [`VOSONdash`](https://vosonlab.github.io/VOSONDash/))."
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In diesem Notebook beschränken wir uns auf die beispielhafte Sammlung einiger Twitterdaten sowie deren Aufbereitung und einfaches [Text Mining](https://de.wikipedia.org/wiki/Text_Mining). Unser Fokus liegt dabei auf der (explorativen) quantitativen Textanalyse (allerdings bietet `R` mit Paketen wie [`RQDA`](https://rqda.r-forge.r-project.org/) auch Optionen für die qualitative Datenauswertung)."
+    "In diesem Notebook beschränken wir uns auf die beispielhafte Sammlung einiger *Twitter*-Daten sowie deren Aufbereitung und einfaches [Text Mining](https://de.wikipedia.org/wiki/Text_Mining). Unser Fokus liegt dabei auf der (explorativen) quantitativen Textanalyse (allerdings bietet `R` mit Paketen wie [`RQDA`](https://rqda.r-forge.r-project.org/) auch Optionen für die qualitative Datenauswertung)."
    ]
   },
   {
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Um die Code-Beispiele in diesem Notebook ausführen zu können, wird [*Academic Research access*](https://developer.twitter.com/en/products/twitter-api/academic-research) für die [*Twitter* API v2](https://developer.twitter.com/en/docs/twitter-api) benötigt. Genauer gesagt benötigen wir ein sogenanntes [Bearer Token](https://developer.twitter.com/en/docs/authentication/oauth-2-0/bearer-tokens). Die Dokumentation für das `R`-Paket [`academictwitteR`](https://github.com/cjbarrie/academictwitteR), welches wir in diesem Notebook nutzen, enthält eine [Vignette, in der die Autorisierung für den *Twitter Academic Research Product Track* ausführlich erklärt wird](https://cran.r-project.org/web/packages/academictwitteR/vignettes/academictwitteR-auth.html)."
+    "Um die Code-Beispiele in diesem Notebook ausführen zu können, wird [*Academic Research access*](https://developer.twitter.com/en/products/twitter-api/academic-research) für die [*Twitter* API v2](https://developer.twitter.com/en/docs/twitter-api) benötigt. Genauer gesagt benötigen wir ein sogenanntes [Bearer Token](https://developer.twitter.com/en/docs/authentication/oauth-2-0/bearer-tokens). Die Dokumentation für das `R`-Paket [`academictwitteR`](https://github.com/cjbarrie/academictwitteR), welches wir in diesem Notebook nutzen, enthält eine [Vignette, in der die Autorisierung für den *Twitter Academic Research Product Track* (inkl. Erstellung eines Bearer Tokens) ausführlich erklärt wird](https://cran.r-project.org/web/packages/academictwitteR/vignettes/academictwitteR-auth.html)."
    ]
   },
   {
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Für die Beispiele in diesem Notebook sammeln wir alle Tweets von den Accounts von [GESIS](https://twitter.com/gesis_org) und dem [CAIS](https://twitter.com/CAISnrw) für den Zeitraum vom 01. Januar 2021 bis zum 10. Mai 2022. Die daraus resultierenden [`JSON` Files](https://de.wikipedia.org/wiki/JavaScript_Object_Notation) speichern wir im zuvor erstellten Ordner `data`."
+    "Für die Beispiele in diesem Notebook sammeln wir alle Tweets von den Accounts von [GESIS - Leibniz-Institut für Sozialwissenschaften](https://twitter.com/gesis_org) und dem [Center for Advanced Internet Studies (CAIS)](https://twitter.com/CAISnrw) für den Zeitraum vom 01. Januar 2021 bis zum 11. Mai 2022. Die daraus resultierenden [`JSON` Files](https://de.wikipedia.org/wiki/JavaScript_Object_Notation) speichern wir im Ordner `data`."
    ]
   },
   {
@@ -179,7 +179,7 @@
     "tweets_df <- get_all_tweets(\n",
     "    users = c(\"gesis_org\", \"CAISnrw\"),\n",
     "    start_tweets = \"2021-01-01T00:00:00Z\",\n",
-    "    end_tweets = \"2022-05-10T00:00:00Z\",\n",
+    "    end_tweets = \"2022-05-11T00:00:00Z\",\n",
     "    n = 10000,\n",
     "    data_path = \"./data\",\n",
     "    bearer_token = bearer_token\n",
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Für die weitere Arbeit mit den Daten erstellen wir nun aus dem `JSON` Files einen `R` Dataframe."
+    "Für die weitere Arbeit mit den Daten erstellen wir nun aus den `JSON` Files einen `R` Dataframe."
    ]
   },
   {
@@ -387,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eine weitere Information, die uns die *Twitter* API ausgibt ist die für den Tweet erkannte Sprache. Auch hier können wir uns anschauen, wie die Verteilung für die beiden Accounts aussieht."
+    "Eine weitere Information, die uns die *Twitter* API ausgibt, ist die für den Tweet erkannte Sprache. Auch hier können wir uns anschauen, wie die Verteilung für die beiden Accounts aussieht."
    ]
   },
   {
@@ -471,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Im nächsten Schritt erstellen wir aus dem Dateframe einen sogenannten [Corpus](https://tutorials.quanteda.io/basic-operations/corpus/corpus/), d.h. eine Sammlung von Dokumenten (in unserem Fall Tweets) plus Metadaten über die Dokumente."
+    "Im nächsten Schritt erstellen wir aus dem Dateframe einen sogenannten [Corpus](https://tutorials.quanteda.io/basic-operations/corpus/corpus/), d.h. eine Sammlung von Dokumenten (in unserem Fall Tweets) plus Metadaten zu den Dokumenten (Tweets)."
    ]
   },
   {
@@ -489,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Im folgenden Aufbereitungsschritt teilen wir die Tweets in einzelne Wörter auf. Dies nennt man [Tokenization](https://en.wikipedia.org/wiki/Lexical_analysis#Tokenization). Zudem entfernen wir einige bestimmte Zeichentypen und -folgen sowie sogenannte [Stoppwörter](https://de.wikipedia.org/wiki/Stoppwort) (d.h., Wörter, die sehr häufig in Texten vorkommen, für deren Inhalt jedoch i.d.R. nicht besonders wichtig sind)."
+    "Im folgenden Aufbereitungsschritt teilen wir die Tweets in einzelne Wörter auf. Dies nennt man [Tokenization](https://en.wikipedia.org/wiki/Lexical_analysis#Tokenization). Zudem entfernen wir bestimmte Zeichentypen und -folgen sowie sogenannte [Stoppwörter](https://de.wikipedia.org/wiki/Stoppwort) (d.h., Wörter, die sehr häufig in Texten vorkommen, für deren Inhalt jedoch i.d.R. nicht besonders wichtig sind)."
    ]
   },
   {
@@ -527,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Selbstverständlich könnte das Preprocessing der Textdaten auch anders ausfallen oder erweitert werden (z.B. durch weitere Bereinigungsschritte mithilfe von Paketen wie [`qdapRegex`](https://github.com/trinker/qdapRegex) oder [`textclean`](https://github.com/trinker/textclean)). Wichtig ist hier allerdings zu beachten, dass die Wahl der Bereinigungsschritte sowie ihre Reihenfolge wesentlich bestimmten, wie die Daten, mit denen am Ende gearbeitet wird, aussehen bzw. was sie beinhalten."
+    "Selbstverständlich könnte das Preprocessing der Textdaten auch anders ausfallen oder erweitert werden (z.B. durch weitere Bereinigungsschritte mithilfe von Paketen wie [`qdapRegex`](https://github.com/trinker/qdapRegex) oder [`textclean`](https://github.com/trinker/textclean)). Wichtig ist hier allerdings zu beachten, dass die Wahl der Bereinigungsschritte sowie ihre Reihenfolge wesentlich bestimmen, wie die Daten, mit denen am Ende gearbeitet wird, aussehen bzw. was sie beinhalten."
    ]
   },
   {
@@ -541,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die zuvor erstellen Document-Feature Matrix (DFM) können wir nun z.B. nutzen, um uns die häufigsten Hashtags und @-Mentions in unseren Tweets anzuschauen."
+    "Die zuvor erstellte Document-Feature Matrix (DFM) können wir nun z.B. nutzen, um uns die häufigsten Hashtags und @-Mentions in unseren Tweets anzuschauen."
    ]
   },
   {
@@ -577,7 +577,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Für die weiteren Analysen möchten wir Hashtags und @-Mentions nun ausschließen."
+    "Für die weiteren Analysen möchten wir Hashtags und @-Mentions ausschließen."
    ]
   },
   {
@@ -649,7 +649,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Um den Vergleich etwas wissenschaftlicher zu machen nutzen wir als finalen Schritt in diesem Beispielnotebook die sogenannte [Keyness](https://tutorials.quanteda.io/statistical-analysis/keyness/). Diese zeigt an, wie distinkt bestimmte Begriffe für einen Text bzw. eine Gruppe von Texten im Vergleich zu allen anderen Texten in einem Corpus sind. In unserem Fall vergleichen wir hier konkret die Tweets von *GESIS* mit denjenigen vom *CAIS*."
+    "Um den Vergleich etwas wissenschaftlicher zu machen, nutzen wir als finalen Schritt in diesem Beispielnotebook die sogenannte [Keyness](https://tutorials.quanteda.io/statistical-analysis/keyness/). Diese zeigt an, wie distinkt bestimmte Begriffe für einen Text bzw. eine Gruppe von Texten im Vergleich zu allen anderen Texten in einem Corpus sind. In unserem Fall vergleichen wir hier konkret die Tweets von *GESIS* mit denjenigen vom *CAIS*."
    ]
   },
   {
@@ -680,7 +680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ausführlichere Einführungen in die quantitative Textanalyse (auch mit *Twitter*-Beispielen) gibt es beispielsweise hier:\n",
+    "Ausführlichere Einführungen in die quantitative Textanalyse (auch mit *Twitter*-Beispielen) gibt es u.a. hier:\n",
     "- [Text Mining with R - A Tidy Approach](https://www.tidytextmining.com/) von Julia Silge und David Robinson\n",
     "- [Text mining in R for the social sciences and digital humanities](https://tm4ss.github.io/docs/) von Andreas Niekler und Gregor Wiedemann\n",
     "- [Automatisierte Inhaltsanalyse mit R](http://inhaltsanalyse-mit-r.de/index.html) von Cornelius Puschmann"
@@ -702,7 +702,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Und natürlich umfasst die Forschung mit *Twitter*- und anderen Social-Media-Daten mehr als nur der Erhebung, Aufbereitung und Auswertung. Im gesamten [Forschungsdatenzyklus](https://www.gesis.org/angebot) ergeben sich für die Forschenden Fragen und Herausforderungen, etwa im Hinblick auf [ethische Aspekte](https://zenodo.org/record/5888912) oder auch die [Archivierung der Daten](https://zenodo.org/record/5041072). Während im Bereich der Sammlung, Aufbereitung und Auswertung solcher Daten viel passiert und Tools und Prozesse sich fortlaufend weiterentwickeln, sind etwa bezüglich der Forschunsethik und des rechtlichen Rahmens noch viele Fragen offen bzw. werden intensiv diskutiert. Und auch für die Archivierung werden Lösungen entwickelt und erprobt, die sich dann noch etablieren müssen."
+    "Und natürlich umfasst die Forschung mit *Twitter*- und anderen Social-Media-Daten mehr als nur die Erhebung, Aufbereitung und Auswertung. Im gesamten [Forschungsdatenzyklus](https://www.gesis.org/angebot) ergeben sich für die Forschenden Fragen und Herausforderungen, etwa im Hinblick auf [ethische Aspekte](https://zenodo.org/record/5888912) oder auch die [Archivierung der Daten](https://zenodo.org/record/5041072). Während im Bereich der Sammlung, Aufbereitung und Auswertung solcher Daten viel passiert und Tools und Prozesse sich fortlaufend weiterentwickeln, sind etwa bezüglich der Forschunsethik und des rechtlichen Rahmens noch viele Fragen offen bzw. werden intensiv diskutiert. Und auch für die Archivierung werden derzeit (u.a. [bei *GESIS*](https://www.gesis.org/en/services/finding-and-accessing-data/collecting-digital-behavioral-data)) Lösungen entwickelt und erprobt, die sich dann noch etablieren müssen."
    ]
   }
  ],
