--- a/twitter-r-examples.ipynb
+++ b/twitter-r-examples.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wie den o.g. Übersichten entnommen werden kann, gibt es neben Tools, die keine Programmierkenntnisse voraussetzen und über eine GUI verfügen (wie z.B. [*TAGS*](https://tags.hawksey.info/)), zahlreiche andere, die für bestimmte Programmiersprachen geschrieben wurden. Die meisten dieser Tools sind entweder `Python` Libraries (wie z.B. [`twarc`](https://twarc-project.readthedocs.io/en/latest/)) oder `R`-Pakete (wie z.B. [`academictwitteR`](https://github.com/cjbarrie/academictwitteR))."
+    "Wie den o.g. Übersichten entnommen werden kann, gibt es neben Tools, die keine Programmierkenntnisse voraussetzen und über eine GUI verfügen (wie z.B. [*TAGS*](https://tags.hawksey.info/)), zahlreiche andere, die für bestimmte Programmiersprachen geschrieben wurden. Die meisten dieser Tools sind entweder `Python` Libraries (wie z.B. [`twarc`](https://twarc-project.readthedocs.io/en/latest/)) oder `R`-Pakete (wie z.B. [`academictwitteR`](https://github.com/cjbarrie/academictwitteR)). Darüber hinaus gibt es auch noch einige Multi-Platform-Tools, mit denen es möglich ist, *Twitter*-Daten zu sammeln (wie z.B. [facepager](https://github.com/strohne/Facepager/) oder [vosonSML](http://vosonlab.net/SocialMediaLab))."
    ]
   },
   {
@@ -60,14 +60,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In diesem Notebook arbeiten wir mit `R`. Der wesentliche Vorteil davon ist, dass wir mit `R` nicht nur *Twitter*-Daten erheben, sondern diese auch auf vielfältige Art aufbereiten und auswerten können. Zur Sammlung der *Twitter*-Daten nutzen wir hier das Paket [`academictwitteR`](https://github.com/cjbarrie/academictwitteR)."
+    "In diesem Notebook arbeiten wir mit `R`. Der wesentliche Vorteil davon ist, dass wir mit `R` nicht nur *Twitter*-Daten erheben, sondern diese auch auf vielfältige Art aufbereiten und auswerten können. Zudem ist mit `R` prinzipiell alles \"customizable\": Von der Sammlung der Daten über die Pipeline zur Aufbereitung bis hin zur Visualisierung und Auswertung. Die Nutzung von `R` für die Arbeit mit *Twitter*-Daten ist voraussetzungsreicher, erlaubt uns aber maximale Flexibilität."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wie so oft im `R`-Universum gibt es auch für die Sammlung, Aufbereitung und Analyse von *Twitter*-Daten verschiedene Pakete. Sehr umfangreiche Optionen für den Datenzugriff über die [*Twitter* API v1.1](https://developer.twitter.com/en/docs/twitter-api/v1) bieten etwa die Pakete [`rtweet`](https://docs.ropensci.org/rtweet/index.html) von [*rOpenSci*](https://ropensci.org/) und [`vosonSML`](https://vosonlab.github.io/vosonSML/) vom [*VOSON Lab*](http://vosonlab.net/). Eine Alternative zu `academictwitteR` für die Nutzung des [*Academic Product Track*](https://developer.twitter.com/en/products/twitter-api/academic-research) für die [*Twitter* API v2](https://developer.twitter.com/en/docs/twitter-api) ist das `R`-Paket [`einfach`](https://github.com/chainsawriot/einfach), welches auch eine GUI bietet (eine weiteres `R`-Paket für *Twitter*-Daten mit einer GUI ist [`VOSONdash`](https://vosonlab.github.io/VOSONDash/))."
+    "ur Sammlung der *Twitter*-Daten nutzen wir hier das Paket [`academictwitteR`](https://github.com/cjbarrie/academictwitteR). Wie so oft im `R`-Universum gibt es auch für die Sammlung, Aufbereitung und Analyse von *Twitter*-Daten verschiedene Pakete. Sehr umfangreiche Optionen für den Datenzugriff über die [*Twitter* API v1.1](https://developer.twitter.com/en/docs/twitter-api/v1) bieten etwa die Pakete [`rtweet`](https://docs.ropensci.org/rtweet/index.html) von [*rOpenSci*](https://ropensci.org/) und [`vosonSML`](https://vosonlab.github.io/vosonSML/) vom [*VOSON Lab*](http://vosonlab.net/). Eine Alternative zu `academictwitteR` für die Nutzung des [*Academic Product Track*](https://developer.twitter.com/en/products/twitter-api/academic-research) für die [*Twitter* API v2](https://developer.twitter.com/en/docs/twitter-api) ist das `R`-Paket [`einfach`](https://github.com/chainsawriot/einfach), welches auch eine GUI bietet (eine weiteres `R`-Paket für *Twitter*-Daten mit einer GUI ist [`VOSONdash`](https://vosonlab.github.io/VOSONDash/))."
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In diesem Notebook beschränken wir uns auf die beispielhafte Sammlung einiger *Twitter*-Daten sowie deren Aufbereitung und einfaches [Text Mining](https://de.wikipedia.org/wiki/Text_Mining). Unser Fokus liegt dabei auf der (explorativen) quantitativen Textanalyse (allerdings bietet `R` mit Paketen wie [`RQDA`](https://rqda.r-forge.r-project.org/) auch Optionen für die qualitative Datenauswertung)."
+    "In diesem Notebook beschränken wir uns auf die beispielhafte Sammlung einiger *Twitter*-Daten sowie deren Aufbereitung und einfaches [Text Mining](https://de.wikipedia.org/wiki/Text_Mining). Unser Fokus liegt dabei auf der (explorativen) quantitativen Textanalyse (allerdings bietet `R` mit Paketen wie [`RQDA`](https://rqda.r-forge.r-project.org/) auch Optionen für die qualitative Datenauswertung). In den folgenden Beispielen konzentrieren wir uns zudem auf die retrospektive Erfassung von Tweets (d.h. wir nutzen nicht die [Streaming-Funktion](https://developer.twitter.com/en/docs/tutorials/stream-tweets-in-real-time) der *Twitter* API für die Sammlung von Tweets in Echtzeit, welche einige der in den o.g. Übersichten genannten Tools auch unterstützen). "
    ]
   },
   {
@@ -167,7 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Für die Beispiele in diesem Notebook sammeln wir alle Tweets von den Accounts von [GESIS - Leibniz-Institut für Sozialwissenschaften](https://twitter.com/gesis_org) und dem [Center for Advanced Internet Studies (CAIS)](https://twitter.com/CAISnrw) für den Zeitraum vom 01. Januar 2021 bis zum 11. Mai 2022. Die daraus resultierenden [`JSON` Files](https://de.wikipedia.org/wiki/JavaScript_Object_Notation) speichern wir im Ordner `data`."
+    "Für die Beispiele in diesem Notebook sammeln wir alle Tweets von den Accounts von [GESIS - Leibniz-Institut für Sozialwissenschaften](https://twitter.com/gesis_org) und dem [Center for Advanced Internet Studies (CAIS)](https://twitter.com/CAISnrw) für den Zeitraum vom 01. Januar 2021 bis zum 12. Mai 2022. Die daraus resultierenden [`JSON` Files](https://de.wikipedia.org/wiki/JavaScript_Object_Notation) speichern wir im Ordner `data`."
    ]
   },
   {
@@ -179,7 +179,7 @@
     "tweets_df <- get_all_tweets(\n",
     "    users = c(\"gesis_org\", \"CAISnrw\"),\n",
     "    start_tweets = \"2021-01-01T00:00:00Z\",\n",
-    "    end_tweets = \"2022-05-11T00:00:00Z\",\n",
+    "    end_tweets = \"2022-05-12T00:00:00Z\",\n",
     "    n = 10000,\n",
     "    data_path = \"./data\",\n",
     "    bearer_token = bearer_token\n",
@@ -666,6 +666,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Daten speichern"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wenn wir die gesammelten Daten für die weitere Auswertung (und/oder zur Archivierung, s.u.) speichern möchten, ist dies mit `R` in vielen verschiedenen Formaten möglich. Aufgrund seiner Interoperabilität nutzen wie hier im Beispiel das CSV-Format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_csv(tweets, file = \".data/tweets.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Where to go from here"
    ]
   },
@@ -702,7 +725,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Und natürlich umfasst die Forschung mit *Twitter*- und anderen Social-Media-Daten mehr als nur die Erhebung, Aufbereitung und Auswertung. Im gesamten [Forschungsdatenzyklus](https://www.gesis.org/angebot) ergeben sich für die Forschenden Fragen und Herausforderungen, etwa im Hinblick auf [ethische Aspekte](https://zenodo.org/record/5888912) oder auch die [Archivierung der Daten](https://zenodo.org/record/5041072). Während im Bereich der Sammlung, Aufbereitung und Auswertung solcher Daten viel passiert und Tools und Prozesse sich fortlaufend weiterentwickeln, sind etwa bezüglich der Forschunsethik und des rechtlichen Rahmens noch viele Fragen offen bzw. werden intensiv diskutiert. Und auch für die Archivierung werden derzeit (u.a. [bei *GESIS*](https://www.gesis.org/en/services/finding-and-accessing-data/collecting-digital-behavioral-data)) Lösungen entwickelt und erprobt, die sich dann noch etablieren müssen."
+    "## Ausblick"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wie bereits eingangs erwähnt, kann man *Twitter*-Daten nicht nur über die API sammeln. Es gibt auch andere Zugangswege (siehe [Breuer et al., 2020](https://doi.org/10.1177/1461444820924622)). Dazu gehören die Nutzung bereits erhobener Daten aus fortlaufenden (z.B. [*TweetsKB*](https://data.gesis.org/tweetskb/), siehe auch [Fafalios et al., 2018](https://doi.org/10.5281/zenodo.573852)) oder abgeschlossenen Sammlungen (z.B. [*Geotagged Twitter posts from the United States*](https://doi.org/10.7802/1166), siehe auch [Kinder-Kurlanda et al., 2017](https://doi.org/10.1177/2053951717736336)). Eine weitere Option ist die Datenspende (data donation) durch Nutzende (siehe z.B. [Boeschoten et al., 2020](https://arxiv.org/abs/2011.09851)). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Natürlich umfasst die Forschung mit *Twitter*- und anderen Social-Media-Daten mehr als nur die Erhebung, Aufbereitung und Auswertung. Im gesamten [Forschungsdatenzyklus](https://www.gesis.org/angebot) ergeben sich für die Forschenden Fragen und Herausforderungen, etwa im Hinblick auf mögliche Verzerrungen (Bias) in den Daten (siehe [Sen et al., 2021](https://dx.doi.org/10.1093/poq/nfab018)), [ethische Aspekte](https://zenodo.org/record/5888912) oder auch die [Archivierung der Daten](https://zenodo.org/record/5041072). Während im Bereich der Sammlung, Aufbereitung und Auswertung solcher Daten viel passiert und Tools und Prozesse sich fortlaufend weiterentwickeln, sind etwa bezüglich der Forschunsethik und des rechtlichen Rahmens noch viele Fragen offen bzw. werden intensiv diskutiert. Und auch für die Archivierung werden derzeit (u.a. [bei *GESIS*](https://www.gesis.org/en/services/finding-and-accessing-data/collecting-digital-behavioral-data)) Lösungen entwickelt und erprobt, die sich dann noch etablieren müssen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Und zu guter Letzt bleibt die Frage, wie lange und für wen *Twitter* relevant bleibt. Wir sehen dies sowohl in der jüngeren Medienhistorie (Stichwort *MySpace* oder *StudiVZ*) ebenso wie in der aktuellen Debatte um die Übernahmepläne von Elon Musk und die plötzlich gestiegene Popularität von *Twitter*-Alternativen wie *Mastodon* (if you want to hop on the bandwagon, join [fediscience](https://fediscience.org/about) or [scholar.social](https://scholar.social/about))."
    ]
   }
  ],
