fix typo in last notebook code cell

--- a/twitter-r-examples.ipynb
+++ b/twitter-r-examples.ipynb
@@ -682,7 +682,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_csv(tweets, file = \".data/tweets.csv\")"
+    "write_csv(tweets, file = \"./data/tweets.csv\")"
    ]
   },
   {
